--- a/css/general.css
+++ b/css/general.css
@@ -48,6 +48,7 @@
   bottom: 20px;
   right: 20px;
   display: none;
+  align-self: flex-start;
 }
 
 /****************************************************************/
@@ -132,7 +133,7 @@ body, html {
 /*Images*/
 .img-responsive {
   width: 100%;
-  height: 85vh;
+  height: 90vh;
 }
 .img-one {
   height: 20%;
@@ -321,7 +322,7 @@ nav[data-toggle="toc"] {
   min-height: 100vh;
   flex-direction: column;
 }
-/*.form-control::placeholder {
+.form-control::placeholder {
   font-size: 0.95rem;
   color: #aaa;
   font-style: italic;
@@ -345,15 +346,21 @@ nav[data-toggle="toc"] {
   margin: 30px auto;
   transform: translate(0px, 50px);
   z-index: 5;
-} */
+} 
 
 /****************************************CONTACT PAGE****************************************/
-/* form animation starts */
+/*************** form animation starts ***********/
+label {
+  display: inline-block;
+  margin-bottom: 2px;
+  margin-left: 50px;
+ }
+
 .form {
   background: #fff;
   box-shadow: 0 30px 60px 0 rgba(90, 116, 148, 0.4);
   border-radius: 5px;
-  max-width: 480px;
+  max-width: 550px;
   margin-left: auto;
   margin-right: auto;
   padding-top: 5px;
@@ -362,61 +369,75 @@ nav[data-toggle="toc"] {
   right: 0;
   position: absolute;
   border-top: 5px solid #0e3721;
-/*   z-index: 1; */
   animation: bounce 1.5s infinite;
 }
 ::-webkit-input-placeholder {
   font-size: 1.3em;
 }
 
-.title{
+/***********Titles**********************/
+.title {
   display: block;
-  font-family: sans-serif;
+  font-family: 'Montserrat', sans-serif;
   margin: 10px auto 5px;
   width: 300px;
 }
-.termsConditions{
-  margin: 0 auto 5px 80px;
-}
-
-.pageTitle{
+.pageTitle {
   font-size: 2em;
   font-weight: bold;
   text-align: center;
 }
-.secondaryTitle{
+.secondaryTitle {
   color: grey;
+  text-align: center;
 }
-
-.name {
+/*************First and Last Name********/
+.f-name {
   background-color: #ebebeb;
-  color: white;
+  color: black;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 12px;
 }
-.name:hover {
+.f-name:hover {
+  border-bottom: 4px solid #0e3721;
+  height: 45px;
+  min-width: 200px;
+  transition: ease 0.5s;
+}
+.l-name {
+  background-color: #ebebeb;
+  color: black;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 12px;
+}
+.l-name:hover {
   border-bottom: 5px solid #0e3721;
-  height: 30px;
-  width: 380px;
+  height: 45px;
+  min-width: 200px;
   transition: ease 0.5s;
 }
 
+/****************Email********************/
 .email {
   background-color: #ebebeb;
-  height: 2em;
+  height: 3em;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 12px;
 }
-
 .email:hover {
   border-bottom: 5px solid #0e3721;
-  height: 30px;
+  height: 45px;
   width: 380px;
   transition: ease 0.5s;
 }
 
+/****************Message********************/
 .message {
   background-color: #ebebeb;
   overflow: hidden;
   height: 10rem;
+  font-family: 'Montserrat', sans-serif;
 }
-
 .message:hover {
   border-bottom: 5px solid #0e3721;
   height: 12em;
@@ -424,29 +445,67 @@ nav[data-toggle="toc"] {
   transition: ease 0.5s;
 }
 
+/****************Form Entry********************/
 .formEntry {
   display: block;
+  margin: 10px auto;
+  margin-left: 50px;
+  min-width: 200px;
+  padding: 15px;
+  border-radius: 2px;
+  border: none;
+  transition: all 0.5s ease 0s;
+  
+}
+.e-formEntry {
+  display: block;
+  margin: 10px auto;
+  margin-left: 50px;
+  min-width: 450px;
+  padding: 25px;
+  border-radius: 2px;
+  border: none;
+  transition: all 0.5s ease 0s;
+}
+.m-formEntry {
+  display: block;
   margin: 30px auto;
-  min-width: 300px;
+  min-width: 450px;
+  padding: 10px;
+  border-radius: 2px;
+  border: none;
+  transition: all 0.5s ease 0s;
+} 
+.s-formEntry {
+  display: block;
+  margin: 30px auto;
+  min-width: 350px;
   padding: 10px;
   border-radius: 2px;
   border: none;
   transition: all 0.5s ease 0s;
 }
+ .form-row {
+   display: flex;
+ } 
+ .form-group {
+   padding: 4px;
+   width: 45%;
+ }
 
+/*****************Submit Button***************/
 .submit {
-  width: 200px;
+  width: 150px;
   color: white;
   background-color: #0e3721;
   font-size: 20px;
+  border-radius: 3%;
 }
-
 .submit:hover {
   box-shadow: 15px 15px 15px 5px rgba(78, 72, 77, 0.219);
   transform: translateY(-3px);
-  width: 300px;
-  border-top: 5px solid #0e3750;
-  border-radius: 0%;
+  width: 150px;
+  border-radius: 3%;
 }
 
 @keyframes bounce {
